
  - [feature] declared_attr can now be used
    on non-mixin classes, even though this is generally
    only useful for single-inheritance subclass
    column conflict resolution.  [ticket:2472]

  - [feature] declared_attr can now be used with
    attributes that are not Column or MapperProperty;
    including any user-defined value as well
    as association proxy objects.  [ticket:2517]

  - [feature] *Very limited* support for
    inheriting mappers to be GC'ed when the
    class itself is deferenced.  The mapper
    must not have its own table (i.e.
    single table inh only) without polymorphic
    attributes in place.
    This allows for the use case of
    creating a temporary subclass of a declarative
    mapped class, with no table or mapping
    directives of its own, to be garbage collected
    when dereferenced by a unit test.
    [ticket:2526]

  - [feature] Declarative now maintains a registry
    of classes by string name as well as by full
    module-qualified name.   Multiple classes with the
    same name can now be looked up based on a module-qualified
    string within relationship().   Simple class name
    lookups where more than one class shares the same
    name now raises an informative error message.
    [ticket:2338]

  - [feature] Can now provide class-bound attributes
    that override columns which are of any
    non-ORM type, not just descriptors.
    [ticket:2535]

  - [feature] Added with_labels and
    reduce_columns keyword arguments to
    Query.subquery(), to provide two alternate
    strategies for producing queries with uniquely-
    named columns.  [ticket:1729].

  - [feature] A warning is emitted when a reference
    to an instrumented collection is no longer
    associated with the parent class due to
    expiration/attribute refresh/collection
    replacement, but an append
    or remove operation is received on the
    now-detached collection.  [ticket:2476]

  - [bug] Declarative can now propagate a column